- 管理端权限收紧：仅管理员登录匿名开放，其他管理接口及 OpenAPI 均要求 ROLE_ADMIN，并补充 401/403 授权测试。java-project/src/main/java/com/xiaolvshu/config/SecurityConfig.java   - 点赞消费者改为事务化 AUTO ACK，异常会触发回滚；点赞计数改为数据库原子更新，避免并发覆盖。java-project/src/main/java/com/xiaolvshu/consumer/LikeMessageConsumer.java 该行为与 Spring AMQP 官方 ACK 说明     (https://docs.spring.io/spring-amqp/reference/amqp/containerAttributes.html)一致。
  - SSE 使用有界线程池，线程数、队列和超时与 Agent 并发限制关联。java-project/src/main/java/com/xiaolvshu/config/WebMvcAsyncConfig.java
  - 后台笔记列表由约 1 + 5N 次关联查询收敛为常数级批量装配，并添加防 N+1 回归测试。
  - 删除了未被使用的分布式锁、限流注解及切面；Redis 前缀删除从阻塞式 KEYS 改为分批 SCAN。
  - 前端路由全面懒加载，Vite 拆分 Vue、Markdown、编辑器依赖，入口包降至约 228 KB。
  - 统一了帖子、搜索、认证、账号安全和后台审核等 JSON 请求入口；SSE、上传等需要原生响应流的路径继续保留 fetch。
  - 从巨型 DetailCard.vue 中抽离视频播放、尺寸、进度和音量持久化逻辑。vue3-project/src/composables/useDetailVideo.js
  - 用实时 OpenAPI 页面替换约 2700 行手工接口文档，并引入适配 Spring Boot 4 的 springdoc 3.0.3。springdoc 官方发布记录 (https://github.com/springdoc/springdoc-openapi/releases)
  - 增加 ESLint、Vitest、CI 工作流和前端 API 边界测试；替换存在隐式依赖的 SVG 插件为仓库内实现。